Fix margin errors on mobile

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+      body {
+        max-width: 100vw;
+      }
+      
       .highlight-phone {
         color: #313437;
         background: linear-gradient(135deg, #33CCFF, #FF33CC);
@@ -9,6 +13,7 @@
         font-size: 18px;
         max-width: 500px;
         line-height: 1.5;
+        text-align: center;
       }
       
       .highlight-phone h2 {
@@ -109,13 +114,22 @@
         margin: 0 auto;
       }
       
+      .register-photo form {
+        display: table-cell;
+        width: 100%;
+        background-color: #ffffff;
+        padding: 40px 60px;
+        color: #505e6c;
+        box-shadow: 1px 1px 5px rgba(0,0,0,0.1);
+      }
+      
       @media (min-width: 480px) {
         .register-photo .form-container {
           width: 80%;
         }
         
-        .highlight-phone .intro {
-          text-align: center;
+        .register-photo form {
+          width: 400px;
         }
       }
       
@@ -151,15 +165,6 @@
         .register-photo .form-container {
           width: 28%;
         }
-      }
-      
-      .register-photo form {
-        display: table-cell;
-        width: 400px;
-        background-color: #ffffff;
-        padding: 40px 60px;
-        color: #505e6c;
-        box-shadow: 1px 1px 5px rgba(0,0,0,0.1);
       }
       
       @media (max-width: 991px) {
